--- a/notes.org
+++ b/notes.org
@@ -376,9 +376,8 @@ CLOSED: [2017-07-23 Sun 16:51]
                            for filter in super-filters
                            if (functionp filter) do (setq filter-fn filter
                                                           args nil)
-                           else do (progn
-                                     (setq filter-fn (car filter)
-                                           args (cadr filter)))
+                           else do (setq filter-fn (car filter)
+                                         args (cadr filter))
                            for (section-name non-matching matching) = (funcall filter-fn rtnall args)
                            collect (cons section-name matching) into sections
                            and do (setq rtnall non-matching)
