--- a/notes.org
+++ b/notes.org
@@ -264,7 +264,7 @@ CLOSED: [2017-07-23 Sun 16:51]
              s e rtn rtnall file date d start-pos end-pos todayp
              clocktable-start clocktable-end filter)
         (setq org-agenda-redo-command
-              (list 'org-agenda-list (list 'quote arg) start-day (list 'quote span) with-hour))
+              (list 'org-super-agenda (list 'quote arg) start-day (list 'quote span) with-hour))
         (dotimes (n (1- ndays))
           (push (1+ (car day-numbers)) day-numbers))
         (setq day-numbers (nreverse day-numbers))
